# rules_rust_bzlmod_vs_nobzlmod

rules_rust_bzlmod/: BUILD.bazel  MODULE.bazel
rules_rust_nobzlmod/: .bazelrc  BUILD.bazel  WORKSPACE
