module(
    name = "rules_rust_bzlmod",
    version = "0.0.1",
)

bazel_dep(
    name = "rules_rust",
    version = "0.45.1",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain()
use_repo(rust, "rust_toolchains")

register_toolchains(
    "@rust_toolchains//:all",
)

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.spec(
    package = "anyhow",
    version = "1.0.77",
)
crate.from_specs()
use_repo(crate, "crates")
